--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,12 +7,18 @@ phases:
       nodejs: 10
   build:
     commands:
+      - ls -l $CODEBUILD_SRC_DIR/my-source/golang-app
+      - ls -l $CODEBUILD_SRC_DIR/my-source/nodejs-app
       - echo Building the Go code...
       - cd $CODEBUILD_SRC_DIR/my-source/golang-app
       - go build hello.go 
       - echo Building the Node code...
       - cd $CODEBUILD_SRC_DIR/my-source/nodejs-app
       - npm run test
+  post_build:
+    commands:
+      - ls -l $CODEBUILD_SRC_DIR/my-source/golang-app
+      - ls -l $CODEBUILD_SRC_DIR/my-source/nodejs-app
 artifacts:
   secondary-artifacts:
     golang_artifacts:
